--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
 PORT=5000
+JWT_SECRET="@#S&A*"
+MONGO="mongodb+srv://amitkushwaha72024:Amit12345@linkedin.2id20.mongodb.net/?retryWrites=true&w=majority&appName=Linkedin"
