--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.3",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.6",
+    "path": "^0.12.7",
     "validator": "^13.12.0"
   }
 }
